# smart-commit

./: README.md  pyproject.toml
src/smart_commit/: __init__.py
